# Klaviator-Firmware

./: .gitignore  CMakeLists.txt  DIRECT_DRIVE_GUIDE.md  FLASH_INSTRUCTIONS.md  PCA9685_LED_TEST_GUIDE.md  PCA9685_TEST_GUIDE.md  PROJECT_STRUCTURE.md  README.md  SERIAL_MONITOR_GUIDE.md  SOLENOID_TEST_GUIDE.md  TESTING_WORKFLOW.md  app.overlay  flash.sh  prj.conf
KDAA/: .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  Klaviator-Firmware_sysbuild_cache.txt  Klaviator-Firmware_sysbuild_cache.txt.tmp  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  domains.yaml  merged.hex  partitions.yml  pm.config  regions.yml
KDAA/Kconfig/: Kconfig.shield  Kconfig.shield.defconfig
KDAA/Kconfig/boards/: Kconfig  Kconfig.defconfig  Kconfig.nrf54l15dk  Kconfig.sysbuild
KDAA/Klaviator-Firmware/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.tmp  build.ninja  build_info.yml  cmake_install.cmake  compile_commands.json
KDAA/Klaviator-Firmware/Kconfig/boards/: Kconfig.nrf54lm20dk  Kconfig.sysbuild
KDAA/_sysbuild/: autoconf.h  cmake_install.cmake
KDAA/_sysbuild/sysbuild/images/: cmake_install.cmake
KDAA/_sysbuild/sysbuild/images/boards/: cmake_install.cmake
KDAA/_sysbuild/sysbuild/images/bootloader/: cmake_install.cmake
KDAA/_sysbuild/sysbuild/images/firmware_loader/: cmake_install.cmake
KDAA/_sysbuild/sysbuild/images/soc/: cmake_install.cmake
build_1/: .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  Klaviator-Firmware_sysbuild_cache.txt.tmp  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  domains.yaml  generated_nrfutil_batch.json  merged.hex
build_1/Kconfig/boards/: Kconfig.defconfig
build_1/Klaviator-Firmware/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  build_info.yml  cmake_install.cmake  compile_commands.json
build_1/Klaviator-Firmware/Kconfig/boards/: Kconfig  Kconfig.nrf54l15dk  Kconfig.sysbuild
build_1/_sysbuild/: cmake_install.cmake
build_1/_sysbuild/sysbuild/images/: cmake_install.cmake
movetest/: .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  Klaviator-Firmware_sysbuild_cache.txt.tmp  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  domains.yaml  merged.hex  pm.config
movetest/Kconfig/arch/: Kconfig.tmp
movetest/Kconfig/soc/: Kconfig.tmp
movetest/Klaviator-Firmware/: .ninja_deps  .ninja_log  CMakeCache.tmp  build.ninja  build_info.yml  cmake_install.cmake  compile_commands.json  zephyr_settings.txt
movetest/Klaviator-Firmware/Kconfig/: Kconfig.shield  Kconfig.shield.defconfig  Kconfig.sysbuild.modules
movetest/Klaviator-Firmware/Kconfig/boards/: Kconfig.defconfig.tmp  Kconfig.nrf54lm20dk
movetest/_sysbuild/: cmake_install.cmake
movetest/_sysbuild/sysbuild/images/: cmake_install.cmake
movetest/_sysbuild/sysbuild/images/boards/: cmake_install.cmake
movetest/_sysbuild/sysbuild/images/bootloader/: cmake_install.cmake
movetest/_sysbuild/sysbuild/images/firmware_loader/: cmake_install.cmake
movetest/_sysbuild/sysbuild/images/soc/: cmake_install.cmake
nyestebuild/: .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  Klaviator-Firmware_sysbuild_cache.txt.tmp  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  domains.yaml  merged.hex  partitions.yml  regions.yml  sysbuild_modules.txt  zephyr_modules.txt
nyestebuild/Kconfig/: Kconfig.modules  kconfig_module_dirs.env
nyestebuild/Kconfig/boards/: Kconfig  Kconfig.sysbuild
nyestebuild/Klaviator-Firmware/: .ninja_deps  .ninja_log  CMakeCache.tmp  build.ninja  build_info.yml  cmake_install.cmake  compile_commands.json
nyestebuild/Klaviator-Firmware/Kconfig/: kconfig_module_dirs.cmake
nyestebuild/Klaviator-Firmware/Kconfig/soc/: Kconfig.defconfig.tmp  Kconfig.soc  Kconfig.sysbuild
nyestebuild/_sysbuild/: autoconf.h  cmake_install.cmake
nyestebuild/_sysbuild/sysbuild/images/: cmake_install.cmake
src/: CMakeLists.txt  main.c  main_blink_test.c  main_direct.c  test_led_basic.c
(+7 files in other folders)
